add new boxes and create responsive

--- a/index.html
+++ b/index.html
@@ -106,10 +106,23 @@
                     <h4>Our selection of cakes <br>with quality taste</h4>
                 </div>
                 <div class="bottom-menu-items">
-                    <div id="image-1" class="image-content"></div>
-                    <div id="image-2" class="image-content"></div>
+                    <div id="image-1" class="image-content">
+                        <div class="inner"></div>
+                    </div>
+                    <div id="image-2" class="image-content">
+
+                    </div>
                     <div id="image-3" class="image-content"></div>
                     <div id="image-4" class="image-content"></div>
+                    <div id="image-5" class="image-content"></div>
+                </div>
+                <div class="bottom-menu-hover-content">
+                    <div class="image-1-hover-content"></div>
+                    <div class="image-2-hover-content"></div>
+                    <div class="image-3-hover-content"></div>
+                    <div class="image-4-hover-content"></div>
+                    <div class="image-5-hover-content"></div>
+
                 </div>
             </div>
         </div>
