Create responsive website for mobile devices

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -31,6 +34,9 @@
                         <li><a href="#">Contact Us</a></li>
 
                     </ul>
+                </div>
+                <div class="bar">
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
 
@@ -108,6 +114,12 @@
                 <div class="bottom-menu-items">
                     <div id="image-1" class="image-content">
                         <div class="inner"></div>
+                        <div class="image1-hover-content">
+                            <h2>Chocolate Cake</h2>
+                            <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, distinctio labore
+                            </h4>
+                        </div>
+
                     </div>
                     <div id="image-2" class="image-content">
 
@@ -116,14 +128,29 @@
                     <div id="image-4" class="image-content"></div>
                     <div id="image-5" class="image-content"></div>
                 </div>
-                <div class="bottom-menu-hover-content">
-                    <div class="image-1-hover-content"></div>
-                    <div class="image-2-hover-content"></div>
-                    <div class="image-3-hover-content"></div>
-                    <div class="image-4-hover-content"></div>
-                    <div class="image-5-hover-content"></div>
+                <!-- <div class="bottom-menu-hover-content">
+                    <div class="image-1-hover-content">
+                        <h2>Chocolate Cake</h2>
+                        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ea, distinctio labore </h4>
+                    </div>
+                    <div class="image-2-hover-content">
+                        <h2>Klassy PanCake</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vel voluptatem commodi</h4>
+                    </div>
+                    <div class="image-3-hover-content">
+                        <h2>Tall Klassy Bread</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vel voluptatem commodi</h4>
+                    </div>
+                    <div class="image-4-hover-content">
+                        <h2>Bluberry Cheese Cake</h2>
+                        <h4>loremLorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                    </div>
+                    <div class="image-5-hover-content">
+                        <h2>Klassy Cup Cake</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vel voluptatem</h4>
+                    </div>
 
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
